@@ -1,3 +1,10 @@
+2003-05-17  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libdb/db_manage.c: better handling of zero sample file size when
+	  opening in read only mode
+
+	* module/x86/op_nmi.c: printk format fix
+
 2003-05-17  John Levon  <levon@movementarian.org>
 
 	* pp/opannotate_option.cpp:
